Fixing candidate names alignment

--- a/css/global.css.less
+++ b/css/global.css.less
@@ -62,7 +62,7 @@ body, input[type="text"], input[type="submit"] {
   font-size: 16px;
 }
 
-.team_name {
+.pic_subtitle {
   font-size: 14px;
   padding-left: 5px;
   line-height: 16px;
